--- a/style.css
+++ b/style.css
@@ -83,8 +83,9 @@ header {
 
 
 .logo {
+    
     font-size: 30px;
-    font-weight: bold;
+    font-weight:  arial bold;
     display: flex;
     align-items: center;
     text-decoration: none;
@@ -98,7 +99,9 @@ header {
     object-fit: cover;
     margin-right: 8px; /* Espace entre l'image et le texte */
 }
-
+.senegal {
+    margin-left: 10px;
+}
 
 .logo .ansar {
     color:blue;
